Test -- should figure out how to self host jekyll

--- a/deck-builder.html
+++ b/deck-builder.html
@@ -34,6 +34,10 @@ weight: 8
         margin-bottom: 3em;
     }
     hr { clear: both; }
+
+    .deemphasized-card {
+        opacity:0.75;
+    }
 </style>
 
 
